# Effective_ElastoPlastic_Properties

./: .gitignore  CMakeLists.txt  InputData.cpp  InputData.hpp  PostProc.m  SigmaCalc.cpp  SigmaCalc.hpp  Utils.cpp  Utils.hpp  main.cpp
